<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Nota">

    <Button
        android:id="@+id/botonCancelarNota"
        android:layout_width="348dp"
        android:layout_height="51dp"
        android:layout_marginBottom="32dp"
        android:text="@string/boton_cancelar_nota"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonGuardarNota" />

    <EditText
        android:id="@+id/contenidoNota"
        android:layout_width="348dp"
        android:layout_height="180dp"
        android:layout_marginBottom="261dp"
        android:hint="@string/contenido_nota"
        app:layout_constraintBottom_toTopOf="@+id/botonGuardarNota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloNota" />

    <EditText
        android:id="@+id/tituloNota"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_marginTop="119dp"
        android:hint="@string/titulo_nota"
        app:layout_constraintBottom_toTopOf="@+id/contenidoNota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonGuardarNota"
        android:layout_width="348dp"
        android:layout_height="51dp"
        android:text="@string/boton_guardar_nota"
        app:layout_constraintBottom_toTopOf="@+id/botonCancelarNota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contenidoNota" />
</androidx.constraintlayout.widget.ConstraintLayout>